[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
dependencies = [
  "make87[zenoh,protobuf]==0.1.0.dev2",
  "make87_messages",
  "ollama>=0.4.7,<1.0.0",
  "mcp",
]
description = "gemma3 wrapper for make87"
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []
